# ai-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
src/: config.py  llm_client.py  main.py
src/agents/: evaluator.py  generator.py
