[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-cli"
version = "0.1.0"
description = "A multi-agent CLI for arbitrated LLM responses."
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "litellm>=1.0.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
ai-cli = "src.main:app"

[tool.setuptools]
packages = ["src", "src.agents"]